--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -9,6 +9,12 @@ spring:
     url: jdbc:mysql://localhost:3306/hamster_db?useSSL=false&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: 1329623049
+  tomcat:
+    max-http-form-post-size: 200MB
+  servlet:
+    multipart:
+      max-request-size: 200MB
+      max-file-size: 200MB
 
 mybatis-plus:
   configuration:
