--- a/hamsterhub-common/pom.xml
+++ b/hamsterhub-common/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
