--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     url: jdbc:mysql://localhost:3306/hamster_db?useSSL=false&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: 1329623049
+    initialization-mode: always
+    schema: classpath:schema.sql
+    data: classpath:data.sql
   tomcat:
     max-http-form-post-size: 200MB
   servlet:
