Redis缓存、重写文件传输接口

--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
     initialization-mode: always
     schema: classpath:schema.sql
     data: classpath:data.sql
+  redis:
+    host: localhost
+    port: 6379
+    password: 1329623049
   tomcat:
     max-http-form-post-size: 200MB
   servlet:
