--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
                 <artifactId>jjwt</artifactId>
                 <version>0.9.1</version>
             </dependency>
+
+            <!--集成redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.1.7.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
