--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     url: jdbc:mysql://localhost:3306/hamster_db?useSSL=false&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: 1329623049
-    initialization-mode: always
+#    initialization-mode: always
     schema: classpath:schema.sql
     data: classpath:data.sql
   redis:
