--- a/hamsterhub-application/pom.xml
+++ b/hamsterhub-application/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>hamsterhub-application</artifactId>
 
     <dependencies>
@@ -111,5 +111,17 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.hamsterhub.ApplicationBootstrap</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
