--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -6,16 +6,16 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/hamster_db?createDatabaseIfNotExist=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: ${MYSQL_USERNAME}
-    password: ${MYSQL_PASSWORD}
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/hamster_db?createDatabaseIfNotExist=true&autoReconnect=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:1329623049}
     initialization-mode: always
     schema: classpath:schema.sql
     data: classpath:data.sql
   redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
+    host: ${REDIS_HOST:localhost}
+    port: ${REDIS_PORT:6379}
+    password: ${REDIS_PASSWORD:1329623049}
   tomcat:
     max-http-form-post-size: 200MB
   servlet:
