--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 8080:8080
     volumes:
       - ./uploads:/app/uploads
+      - ./avatars:/app/avatars
     environment:
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
