--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,25 @@
                 <version>4.8.4</version>
             </dependency>
 
+            <!-- 阿里云短信服务 -->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>4.5.16</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+                <version>2.1.0</version>
+            </dependency>
+
+            <!-- 腾讯云短信服务 -->
+            <dependency>
+                <groupId>com.tencentcloudapi</groupId>
+                <artifactId>tencentcloud-sdk-java</artifactId>
+                <version>3.1.1000</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
