--- a/hamsterhub-application/pom.xml
+++ b/hamsterhub-application/pom.xml
@@ -126,6 +126,12 @@
             <artifactId>tencentcloud-sdk-java</artifactId>
         </dependency>
 
+        <!-- RocketMQ -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
