--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
                 <version>3.1.1000</version>
             </dependency>
 
+            <!-- RocketMQ -->
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>2.2.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
