--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: kougami132/hamsterhub-api
     container_name: hh-api
     restart: unless-stopped
+    user: 1000:1000
     ports:
       - 8080:8080
     volumes:
@@ -64,16 +65,15 @@ services:
     image: linuxserver/qbittorrent
     container_name: hh-qb
     restart: unless-stopped
+    user: 1000:1000
     expose:
       - '8888'
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Asia/Shanghai # 你的时区
-      - WEBUI_PORT=8888 # 将此处修改成你欲使用的 WEB 管理平台端口
+      - TZ=Asia/Shanghai
+      - WEBUI_PORT=8888
     volumes:
-      - ./qb-config:/config # 绝对路径请修改为自己的config文件夹
-      - ./temp:/downloads # 绝对路径请修改为自己的downloads文件夹
+      - ./qb-config:/config
+      - ./temp:/downloads
 
 networks:
   default:
