--- a/hamsterhub-common/pom.xml
+++ b/hamsterhub-common/pom.xml
@@ -17,14 +17,10 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <!-- Swagger -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
 
         <dependency>
