--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.7.18</version>
         <relativePath/>
     </parent>
 
@@ -40,11 +40,11 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
-            <!-- SpringBoot -->
+            <!-- Spring Boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.1.3.RELEASE</version>
+                <version>2.7.18</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -56,12 +56,12 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>3.1.0</version>
+                <version>3.5.7</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
-                <version>3.1.0</version>
+                <version>3.5.7</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis</groupId>
@@ -69,7 +69,7 @@
                 <version>1.0.2</version>
             </dependency>
 
-            <!-- lombok -->
+            <!-- Lombok -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -79,7 +79,7 @@
             <!-- Mapstruct -->
             <dependency>
                 <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-jdk8</artifactId>
+                <artifactId>mapstruct</artifactId>
                 <version>${org.mapstruct.version}</version>
             </dependency>
             <dependency>
@@ -92,19 +92,14 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.47</version>
+                <version>1.2.83</version>
             </dependency>
 
             <!-- Swagger -->
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>2.9.2</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>2.9.2</version>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>1.7.0</version>
             </dependency>
 
             <!-- JWT -->
@@ -114,44 +109,44 @@
                 <version>0.9.1</version>
             </dependency>
 
-            <!--集成redis-->
+            <!-- Redis -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>2.1.7.RELEASE</version>
+                <version>2.7.9</version>
             </dependency>
 
-            <!-- okhttp -->
+            <!-- OkHttp -->
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
-                <version>3.6.0</version>
+                <version>4.10.0</version>
             </dependency>
 
-            <!-- 加密 -->
+            <!-- Web3j -->
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
-                <version>4.8.4</version>
+                <version>4.9.5</version>
             </dependency>
 
             <!-- 阿里云短信服务 -->
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
-                <version>4.5.16</version>
+                <version>4.6.0</version>
             </dependency>
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
-                <version>2.1.0</version>
+                <version>2.2.1</version>
             </dependency>
 
             <!-- 腾讯云短信服务 -->
             <dependency>
                 <groupId>com.tencentcloudapi</groupId>
                 <artifactId>tencentcloud-sdk-java</artifactId>
-                <version>3.1.1000</version>
+                <version>3.1.701</version>
             </dependency>
 
         </dependencies>
@@ -163,7 +158,7 @@
         <java.version>1.8</java.version>
 
         <org.projectlombok.version>1.18.0</org.projectlombok.version>
-        <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
     </properties>
 
     <build>
