--- a/hamsterhub-common/pom.xml
+++ b/hamsterhub-common/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>jjwt</artifactId>
         </dependency>
 
+        <!-- Swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
