feat: 用户推送配置与GoCq推送

--- a/hamsterhub-application/src/main/resources/application.yml
+++ b/hamsterhub-application/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       max-file-size: 2048MB
   sql:
     init:
-      mode: never
+      mode: always
       schema-locations: classpath:schema.sql
 
 mybatis-plus:
