--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /uploads/
-/hamsterhub-service/target/
-/hamsterhub-common/target/
-/hamsterhub-application/target/
+target/
 /.idea/
 /avatars/
 /temp/
